--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,4 @@
-# env
 .env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
 
 # compiled output
 /dist
@@ -24,6 +19,7 @@ lerna-debug.log*
 # Tests
 /coverage
 /.nyc_output
+/env
 
 # IDEs and editors
 /.idea
